// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label accepts props 1`] = `
.c0 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<label
  className="label-class test c0"
  htmlFor="htmlFor"
  id="labelId"
>
  Test Input
</label>
`;

exports[`Label adds asterisk if required 1`] = `
.c0 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<label
  className="c0"
>
  Required Field
  <span
    className=""
  >
    *
  </span>
</label>
`;

exports[`Label does not render without child 1`] = `null`;

exports[`Label renders with child 1`] = `
.c0 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<label
  className="c0"
>
  Test Label
</label>
`;
